--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-NAME=Krypton
-PREFIX=!
-MODS=917003213xxx
+NAME=RIKKA
+PREFIX=-
+MODS=918984257480
 PORT=3000
 WRITE_SONIC=
-BG_API_KEY=
-SESSION=
-URL=mongodb+srv://<username>:<password>@cluster0.xxwc771.mongodb.net/?retryWrites=true&w=majority
+BG_API_KEY=NzSnqafeVGN2WpNxxVmydKLG
+SESSION=SOHAN
+URL=mongodb+srv://Sohanxd:Sohan692@cluster0.vi8v19i.mongodb.ne?retryWrites=true&w=majority
